--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -37,6 +37,8 @@ nav:
     - Action Wheel: payloads/WheelPayload.md
     - Input Prompts: payloads/InputbarPayload.md
     - Beacon Beams: payloads/BeaconBeamPayload.md
+  - Utils: 
+    - Check if Player plays NRC: utils/NRCPlayer.md
 
 extra:
   generator: false
